[tool.poetry]
name = "igfeed-proxy"
version = "0.1.0"
description = "A proxy for Instagram Basic Display API"
authors = ["Félix Voituret <felix@voituret.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
httpx = "^0.17.1"
Hypercorn = {extras = ["uvloop"], version = "^0.11.2"}
uvloop = "^0.15.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
mypy = "^0.812"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
