[tool.poetry]
name = "igfeed-proxy"
version = "0.2.5"
description = "A proxy application based on Instagram Basic Display API"
authors = ["Félix Voituret <felix@voituret.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
pydantic = "^1.8.1"
Hypercorn = {extras = ["uvloop"], version = "^0.11.2"}
uvloop = "^0.15.2"
httpx = "^0.17.1"
APScheduler = "^3.7.0"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
pytest = "^6.2.3"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
